BENCH-4234 - Add underlay API to count by criteria (#1032)